themes/classic/assets/css/custom.css
/* ... */
#block-reassurance li {
    max-width: 50%;
}

#block-reassurance li .block-reassurance-item span {
    font-size: 1.5rem;
}

/** category main **/
.categorysectionsmain-products {
    display: flex;
    flex-wrap: wrap;
}

.categorysectionsmain-products .item {
    width: 100%;
    padding: 10px;
    height: 300px;
}

.categorysectionsmain-products .item .content {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.categorysectionsmain-products .item .content h2 {
    margin: 0;
    display: none;
}

.featured-products {
    padding: 30px 0px 50px;
    margin-top: 0;
    border: none;
}

.featured-products.background-full-primary, .product-accessories {
    padding: 30px 30px 50px;
    margin-top: 0;
    border: none;
}

.featured-products .product-title a, .featured-products .price {
    color: white !important;
}

.featured-products .all-product-link {
    text-align: center;
    margin: auto;
    width: fit-content;
    display: flex;
    font-size: 1.2rem;
}

.wishlist-button-add {
    display: none !important;
}

.featured-products .thumbnail-container {
    background: none;
    text-align: left;
    color: white;
}

.featured-products .product-list-reviews, .featured-products .product-description {
    background: none;
}

.featured-products h3 a {
    font-size: 1.5rem !important;
}

.featured-products .price {
    font-size: 1.3rem !important;
}

.featured-products .all-product-link.mariner-button, .mariner-button {
    border: 1px solid white;
    color: white;
    padding: 20px 60px;
    text-decoration: underline;
    text-transform: uppercase;
    font-weight: bold;
    transition: .2s;
}

.featured-products .all-product-link.mariner-button:hover, .mariner-button:hover {
    background: white;
    color: #041322;
    border-color: #041322;;
}

.mariner-button.primary:hover {
    border: 1px solid white;
    background: #041322;
    color: white;
}

.mariner-button.primary {
    color: #041322;
    border-color: #394867;
}

/** Discover section **/
.discover-section .bg-primary {
    padding: 40px;
    width: 100%;
}

.discover-section {
    display: flex;
    align-items: stretch;
    flex-wrap: wrap;
}

.discover-section .bg-primary p {
    padding: 15px 0;
    font-size: 2.2rem;
    line-height: 2.2rem;
    font-family: "Resolve Medium";
}

.discover-section .bg-primary h2 {
    font-size: 2.8rem;
}


.discover-section .image-section {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding: 0;
}

.header-icons {
    min-width: 185px;
    display: flex;
    justify-content: flex-end;
}

.header-icons img {
    margin: 0 20px 20px;

}

.header-icons #_desktop_cart img {
    margin-right: 5px;
}

#header .header-nav .blockcart {
    padding: 0.5rem;
    background: none;
}

.header-icons .user-info {
    margin-top: 5px;
}

#_desktop_language_selector, #_desktop_currency_selector, #_mobile_currency_selector, #_mobile_language_selector {
    align-self: center;
    display: none;
}

#header .header-top-right {
    justify-content: center;
}

#header .header-top-right .menu {
    width: 100%;
    margin-left: 8%;
}

#header .header-top {
    padding: 0;
}

#header .header-top .top-menu {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
}

#header .header-top > .container > .row:first-of-type {
    align-items: flex-start;
}

/** Custom HTML BLOCKS **/

#pshomeslider .carousel-item {
    background-size: contain;
}

#html_block_2 img {
    max-width: 100%;
    height: auto;
}

#html_block_2 .row {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}


#html_block_2 .row .mariner-button {
    display: block;
    width: fit-content;
}

#html_block_3, #html_block_2 {
    margin: 50px 0;
}


#html_block_3 .item {
    margin: 20px;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-position: center !important;
    background-size: cover !important;
}

#html_block_3 .item p, #html_block_3 .item a {
    display: flex;
    flex-direction: column;
    text-align: center;
    font-size: 2.5rem;
    line-height: 2.5rem;
    color: white;
}

#html_block_3 .item p .price, #html_block_3 .item a .price {
    font-size: 4.5rem;
    margin-top: 2.5rem;
}

#html_block_4 {
    padding: 50px 20px;
}

#html_block_4 .slick-track {
    display: flex !important;
}

#html_block_4 .item {
    background: white;
    margin: 30px;
    padding: 25px;
    height: inherit !important;
}

#html_block_4 .item p {
    margin-top: 20px;
}

.bandeau-top .html_block {
    margin: 0 !important;
}

.page-cms #content {
    max-width: 800px;
    margin: auto;
}

.page-cms #content video, .page-cms #content img, .page-cms #content iframe {
    max-width: 100%;
}

/** Blog **/
#module-prestablog-blog .prestablog_more {
    background: rgb(35, 35, 35);

}

#prestablogfont ul li {
    color: black;
}

#module-prestablog-blog ul {
    font-weight: bold;
}

#module-prestablog-blog #left-column {
    display: none;
}

#module-prestablog-blog #content-wrapper {
    margin: auto;
    float: none;
}

#module-prestablog-blog #prestablogfront a {
    font-family: 'BebasNeueProBook', Sans-serif;
    font-size: 1rem;
    font-weight: bold;
}

#module-prestablog-blog #prestablogfront {
    border: none;
}

#module-prestablog-blog #prestablogfront h2, #module-prestablog-blog #prestablogfront h3, #module-prestablog-blog #prestablogfront h4,
#module-prestablog-blog #prestablogfront h5, #module-prestablog-blog #prestablogfront h6 {
    text-align: left;
    border: none;
    margin: 40px 0 20px;
    padding: 0;
}

#module-prestablog-blog .prestablogExtra {
    display: none;
}

/** Product **/
#wrapper .breadcrumb li::after {
    content: '>';
    color: #394867;
}

#wrapper .breadcrumb li a, #wrapper .breadcrumb li span {
    color: #394867;
    font-size: 1.2rem;
}
/* ... */

